fix styles in words list, book quest, a wrap, fonts

--- a/src/app/modules/auto-hr/components/task-answer-popup/task-answer-popup.component.css
+++ b/src/app/modules/auto-hr/components/task-answer-popup/task-answer-popup.component.css
@@ -34,3 +34,7 @@ pre code {
 .b-for-code {
   font-size: 10px;
 }
+
+a {
+  overflow-wrap: anywhere;
+}
