--- a/src/app/modules/languages/pages/at-on-in-exerciser/at-on-in-exerciser.component.scss
+++ b/src/app/modules/languages/pages/at-on-in-exerciser/at-on-in-exerciser.component.scss
@@ -31,6 +31,5 @@
 }
 
 .mobile-actions {
-  position: absolute;
-  bottom: 24px;
+  margin-top: 24px;
 }
