--- a/src/app/shared/components/book-quest/book-quest.component.scss
+++ b/src/app/shared/components/book-quest/book-quest.component.scss
@@ -1,4 +1,3 @@
 .book-quest-part-container {
-  width: 80%;
   padding: 16px;
 }
