--- a/src/assets/scss/common/_font.scss
+++ b/src/assets/scss/common/_font.scss
@@ -23,7 +23,6 @@
 
 .fs-1rem {
   font-size: 1rem !important;
-  line-height: 1rem;
 }
 
 .fs-10rem {
